...
            SwiftSpinner.hide()
            if (authenticationSuccess == true) {
                self.dismiss(animated: true, completion: nil)
            } else {
                switch (myerr) {
                case .AuthenticationFailure :
                    self.showAlert(withTitle: "Authentication Failure", message: myerr.value)
                    break
                case .UnhandledError :
                    self.showAlert(withTitle: "Unhandled Error", message: myerr.value)
                    break
                case .NetworkError :
                    self.showAlert(withTitle: "Error", message: myerr.value)
...
